# Preql

./: .gitattributes  .pre-commit-config.yaml  .pylintrc  CONTRIBUTING  LICENSE  README.md  TODO.md  pip-requirements.txt  pyproject.toml  requirements.txt  runtime.txt  setup.py
.github/workflows/: tests.yml
benchmark/: test_chinook.py  test_get.py
binder/: postBuild
docs/: Makefile  api.rst  chinook_tutorial.ipynb  code-comparison.md  comparison.md  comparison_sql.md  competition.md  conf.py  faq.md  features.md  getting-started.md  index.rst  introduction.md  language.md  make.bat  performance.md  python-api.rst  reference.md  requirements.txt  roadmap.md  tutorial.md
docs/_ext/: preql_autodoc.py
docs/_static/: custom.css
examples/: README.md  airports.pql  airports.py  bigquery_covid19.pql  chinook.pql  fizzbuzz.pql  matrices.pql  movie_recommender.pql  primes.pql  tree.pql
preql/: __init__.py  __main__.py  _base_imports.py  api.py  ast_classes.py  autocomplete.py  base.py  casts.py  compiler.py  context.py  core.pql  dispatchy.py  display.py  evaluate.py  exceptions.py  imdb_test.py  interp_common.py  interpreter.py  loggers.py  parser.py  pql_ast.py  pql_functions.py  pql_objects.py  pql_types.py  preql.lark  repl.py  settings.py  simple1.pql  simple2.pql  simple3.pql  simple_test1.py  simple_test2.py  simple_test3.py  sql.py  sql_interface.py  tree.pql  tree_test.py  types_impl.py  utils.py
preql/core/: autocomplete.py  base.py  casts.py  compile_binops.py  compiler.py  display.py  evaluate.py  exceptions.py  interp_common.py  interpreter.py  parser.py  pql_ast.py  pql_functions.py  pql_objects.py  pql_types.py  preql.lark  sql.py  sql_import_result.py  state.py  types_impl.py
preql/docstring/: autodoc.py  docstring.lark  docstring.py  type_docs.py
preql/jup_kernel/: __init__.py  __main__.py  install.py  kernel.py
preql/modules/: __builtins__.pql  graph.pql
tests/: __main__.py  box_circle.pql  common.py  country_person.pql  requirements.pip  simple1.pql  simple2.pql  test_autocomplete.py  test_basic.py
