[tool.poetry]
name = "preql-lang"
version = "0.1.17"
description = "An interpreted relational query language that compiles to SQL"
authors = ["Erez Shin <erezshin@gmail.com>"]
license = "Interface-Protection Clause + MIT"
readme = "README.md"
repository = "https://github.com/erezsh/Preql"
documentation = "https://preql.readthedocs.io/en/latest/"
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.8",
    "Development Status :: 3 - Alpha",
    "License :: Free To Use But Restricted",
    "Environment :: Console",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Database :: Database Engines/Servers",
    "Topic :: Database :: Front-Ends",
    "Topic :: Software Development :: Compilers",
    "Topic :: Software Development :: Interpreters",
    "Typing :: Typed"
]
packages = [{ include = "preql" }]

[tool.poetry.dependencies]
python = "^3.8"
lark-parser = "^0.11.1"
runtype = "^0.1.6"
dsnparse = "*"
tqdm = "*"
prompt-toolkit = "*"
pygments = "*"
rich = "^9.5.1"

psycopg2 = { version = "*", optional = true }
mysqlclient = { version = "*", optional = true }
starlette = { version = "*", optional = true }

[tool.poetry.extras]
mysql = ["mysqlclient"]
pgsql = ["psycopg2"]
server = ["starlette"]

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
preql = 'preql.__main__:main'