[tool.poetry]
name = "preql"
version = "0.2.6"
description = "An interpreted relational query language that compiles to SQL"
authors = ["Erez Shin <erezshin@gmail.com>"]
license = "Interface-Protection Clause + MIT"
readme = "README.md"
repository = "https://github.com/erezsh/Preql"
documentation = "https://preql.readthedocs.io/en/latest/"
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Development Status :: 4 - Beta",
    "License :: Free To Use But Restricted",
    "Environment :: Console",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Database :: Database Engines/Servers",
    "Topic :: Database :: Front-Ends",
    "Topic :: Software Development :: Compilers",
    "Topic :: Software Development :: Interpreters",
    "Typing :: Typed"
]
packages = [{ include = "preql" }]

[tool.poetry.dependencies]
python = "^3.6"
lark-parser = "^0.11.3"
runtype = "^0.1.16"
dsnparse = "*"
prompt-toolkit = "*"
pygments = "*"
rich = "^10.7.0"
arrow = "*"

psycopg2 = { version = "*", optional = true }
mysqlclient = { version = "*", optional = true }
starlette = { version = "*", optional = true }

[tool.poetry.extras]
mysql = ["mysqlclient"]
pgsql = ["psycopg2"]
server = ["starlette"]

[tool.poetry.dev-dependencies]
parameterized = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
preql = 'preql.__main__:main'